# rust-warehouse-architecture

./: Cargo.toml  Docker-compose.yml  README.md
client/: bun.lockb  package.json
client/src/app/: layout.tsx  page.module.css  page.tsx
client/src/app/(main)/teams/: page.tsx
client/src/components/Card/: Card.tsx  card.module.css
client/src/components/Nav/: Navbar.tsx  nav.module.css
common-error/: Cargo.toml
common-error/src/: error.rs
common-kafka/: Cargo.toml
common-kafka/src/: config.rs  consumer.rs  lib.rs  producer.rs
inbound-outbox/: Cargo.toml
inbound-outbox/src/: lib.rs  main.rs
inbound-service/: Cargo.toml  inbound-stock.csv
inbound-service/src/: main.rs  model.rs
