[workspace]

members = ["common-error", "common-kafka", "inbound-outbox", "inbound-service"]

[workspace.dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
futures-util = "0.3.31"
rdkafka = { version = "0.37.0", features = ["cmake-build", "ssl", "sasl"] }
serde = { version = "1.0.164", features = ["derive"] }
testcontainers = "0.23.1"
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.18"
thiserror = "2.0.6"
mongodb = "3.1.0"
opentelemetry = { version = "0.27.1", features = ["metrics"] }
apache-avro = { version = "0.17", features = ["derive"] }
schema_registry_converter = { version = "4.2.0", features = [
    "avro",
    "easy",
    "kafka_test",
] }
rand = "0.8.5"
