[package]
name = "inbound-service"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
common-error = { path = "../common-error/" }
common-kafka = { path = "../common-kafka/" }
csv = "1.1"
serde = { workspace = true }
rand = { workspace = true }
inbound-outbox = { path = '../inbound-outbox' }
